fixed alignment and added favicon

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -35,12 +35,14 @@ fieldset {
     flex-direction: column;
     align-items: center;
     margin: 50px;
+    text-align: center;
     p {
         font-size: .5em;
         text-transform: uppercase;
         letter-spacing: 0.1em;
         width: 100%;
         margin-bottom: 30px;
+        text-align: center;
     }
 }
 
@@ -66,6 +68,8 @@ input[type="submit"] {
 label {
     width: 30%;
     margin-bottom: 30px;
+    display: block;
+    margin: 0 auto;
 }
 
 section {
